# rust_new_world

./: .gitignore  README.md  docker-compose.yml
Individual_project/chatbot/: Cargo.toml  Dockerfile  Helloworld.c  Makefile  README.md
Individual_project/chatbot/src/: main.rs
Individual_project/joke/: Cargo.toml  Dockerfile  Makefile  README.md
Individual_project/joke/src/: main.rs
Individual_project/qa/: Cargo.toml  Dockerfile  README.md
Individual_project/qa/src/: main.rs
InttoRoman/src/: lib.rs  main.rs
Mini_programs/InttoRoman/: Cargo.toml  README.md
Mini_programs/calculator/: README.md
Mini_programs/calculator/src/: main.rs
Mini_programs/countdown_timer/: Cargo.toml  README.md
Mini_programs/countdown_timer/src/: main.rs
Mini_programs/grrs/: README.md
Mini_programs/guessing_game/src/: main.rs
Mini_programs/imgtoASCII/: Cargo.toml  README.md
Mini_programs/longest_parlidrome/: Cargo.toml  README.md
Mini_programs/longest_parlidrome/src/: lib.rs  main.rs
Mini_programs/password_generate/: Cargo.toml  README.md
Mini_programs/password_generate/src/: main.rs
Mini_programs/pig_latin_translator/: Cargo.toml  README.md
Mini_programs/pig_latin_translator/src/: main.rs
Mini_programs/rock_paper_scissor/: README.md
Mini_programs/rock_paper_scissor/src/: main.rs
Mini_programs/temp_converter/: README.md
Mini_programs/temp_converter/src/: main.rs
grrs/: Cargo.toml
grrs/src/: main.rs
guessing_game/: README.md
guessing_game/src/: main.rs
imgtoASCII/: image.txt
imgtoASCII/src/: cmd.rs  main.rs
rock_paper_scissor/: Cargo.toml
