[package]
name = "joke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
serde = { version = "1.0.130",features = ["derive"]}
serde_json = { version = "1.0.68"}
reqwest = { version = "0.11.6", features = ["json"] }